--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "singleQuote": true
   },
   "dependencies": {
-    "fastify": "^4.24.3"
+    "drizzle-orm": "^0.29.0",
+    "fastify": "^4.24.3",
+    "fastify-plugin": "^4.5.1",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/node": "^20.9.2",
+    "@types/pg": "^8.10.9",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "drizzle-kit": "^0.20.4",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "nodemon": "^3.0.1",
